# VideoThinkBench

./: .gitignore  README.md  cli.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
core/: io.py  prompts.py  schemas.py  vlm_rewards.py
data/: __init__.py  base.py  export.py  generate.py  point_target_base.py  registry.py  scan.py  video_encoding.py
data/evaluation/: commands.py
data/exporters/: __init__.py  bagel.py  diffsynth_image.py  diffsynth_video.py  ms_swift.py
data/maze/: maze_base.py
data/puzzle/: base.py
data/textcentric/: __init__.py
data/tools/: eval_infer.py  eval_offline.py  generate_dataset.py  prepare_image_data.py  prepare_video_data.py  prepare_vlm_data.py
data/visioncentric/: __init__.py
docs/: benchmark_overview.md  evaluation.md  guide.md  migration_from_thinking_with_video.md  project_background.md  prompt_audit.md  task_catalog.md  training.md
docs/tasks/: arcagi2.md  eyeballing.md  legacy.md  maze.md  textcentric.md  visual_puzzle.md
evaluation/: commands.py  pipeline.py
evaluation/infer/: __init__.py  common.py  common_diffsynth.py  image.py  video.py  vlm.py
evaluation/offline/: __init__.py  common.py  eyeballing.py  maze.py  visual_puzzle.py
evaluation/textcentric/: evaluate_videos.py
evaluators/: __init__.py  commands.py  pipeline.py
evaluators/frame_matching/: __init__.py
evaluators/infer/: common.py  image.py  video.py  vlm.py
evaluators/offline/: __init__.py  common.py  eyeballing.py  maze.py  (+1 more)
scripts/: README.md  _prepare_training_data_common.py  eval_infer.py  eval_offline.py  eval_textcentric.sh  extract_best_frame.sh  generate_data.sh  generate_dataset.py  prepare_image_data.py  prepare_video_data.py  prepare_vlm_data.py  run_VLM.sh  run_textcentric.sh  run_visual_puzzles.sh
tasks/: __init__.py  specs.py
tests/: test_arc_connect_evaluator.py  test_exporters.py  test_eyeballing_generation_quality.py  test_maze_offline.py  test_midpoint_params.py  test_registry.py  test_vlm_rewards.py
training/: __init__.py
utils/: __init__.py  prompts.py
vtb/: __init__.py  cli.py  schemas.py
(+157 files in other folders)
